AWS_Hub_2_VPC_US-East-1/vpc.tf
##############################################################################################################
# Production VPC - Hub
##############################################################################################################
resource "aws_vpc" "SDWAN_VPC" {
  count = var.create_hub_2_vpc == "yes" ? 1 : 0
  provider       = aws.hub_2_VPC
  cidr_block           = var.hub_2_vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name            = "${var.username}_Terraform_hub_2_Prod_VPC"
    Resources_Owner = var.username
    Enviroment      = "Terraform Production"
  }
}

// Get all avaliable AZ's in the region variable

data "aws_availability_zones" "AZs" {
  provider = aws.hub_2_VPC
  state = "available"
}

# IGW
resource "aws_internet_gateway" "prod_vpc_igw" {
  count = var.create_hub_2_vpc == "yes" ? 1 : 0
  provider       = aws.hub_2_VPC
  vpc_id = aws_vpc.SDWAN_VPC[count.index].id
  tags = {
    Name            = "${var.username}_Terraform_hub_2_Prod_VPC_IGW"
    Resources_Owner = var.username
    Enviroment      = "Terraform Testing"
  }
}
